--- a/src/main/resources/com/example/mytunesproject/MyTunes-view.fxml
+++ b/src/main/resources/com/example/mytunesproject/MyTunes-view.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -19,8 +21,14 @@
          <children>
             <VBox prefHeight="200.0" prefWidth="240.0">
                <children>
-                  <ListView prefHeight="433.0" prefWidth="238.0" />
-                  <HBox prefHeight="63.0" prefWidth="240.0">
+                  <TableView prefHeight="581.0" prefWidth="229.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="Name" />
+                      <TableColumn prefWidth="75.0" text="Songs" />
+                        <TableColumn prefWidth="75.0" text="Time" />
+                    </columns>
+                  </TableView>
+                  <HBox prefHeight="206.0" prefWidth="229.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#newPlaylist" text="New...">
                            <HBox.margin>
@@ -49,7 +57,7 @@
                   <ListView maxWidth="187.0" prefHeight="434.0" prefWidth="187.0" />
                   <HBox prefHeight="63.0" prefWidth="240.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#moveUp" text="UP">
+                        <Button mnemonicParsing="false" onAction="#moveUp" prefHeight="34.0" prefWidth="32.0" text="UP">
                            <HBox.margin>
                               <Insets top="10.0" />
                            </HBox.margin>
@@ -99,7 +107,14 @@
             </Button>
             <VBox prefHeight="508.0" prefWidth="413.0">
                <children>
-                  <ListView prefHeight="434.0" prefWidth="409.0" />
+                  <TableView prefHeight="438.0" prefWidth="398.0">
+                    <columns>
+                      <TableColumn prefWidth="100.79998618364334" text="Title" />
+                      <TableColumn prefWidth="91.99993133544922" text="Artist" />
+                        <TableColumn prefWidth="95.19996643066406" text="Genre" />
+                        <TableColumn prefWidth="109.60004272460935" text="Time" />
+                    </columns>
+                  </TableView>
                   <HBox prefHeight="63.0" prefWidth="350.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#newSongLib" text="New...">
