--- a/src/main/resources/com/example/mytunesproject/NewEditSong.fxml
+++ b/src/main/resources/com/example/mytunesproject/NewEditSong.fxml
@@ -7,12 +7,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="299.0" prefWidth="403.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="299.0" prefWidth="403.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytunesproject.Controller">
    <children>
-      <TextField layoutX="97.0" layoutY="57.0" onAction="#insertTitle" />
+      <TextField fx:id="insertTitle" layoutX="97.0" layoutY="57.0" />
       <TextField fx:id="insertArtist" layoutX="97.0" layoutY="97.0" />
       <TextField fx:id="insertTime" layoutX="97.0" layoutY="177.0" prefHeight="25.0" prefWidth="52.0" />
-      <TextField fx:id="insertTime" layoutX="97.0" layoutY="217.0" prefHeight="25.0" prefWidth="215.0" />
+      <TextField fx:id="insertFile" layoutX="97.0" layoutY="217.0" prefHeight="25.0" prefWidth="215.0" />
       <Button layoutX="180.0" layoutY="137.0" mnemonicParsing="false" onAction="#moreGenre" text="More" />
       <Button layoutX="323.0" layoutY="218.0" mnemonicParsing="false" onAction="#chooseFile" text="Choose" />
       <Button layoutX="268.0" layoutY="258.0" mnemonicParsing="false" onAction="#cancelSongInfo" text="Cancel" />
