--- a/src/main/resources/com/example/mytunesproject/Mytunes2.fxml
+++ b/src/main/resources/com/example/mytunesproject/Mytunes2.fxml
@@ -67,7 +67,7 @@
                            <graphic>
                               <ImageView fitHeight="27.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../../../../../OneDrive/Desktop/MyTunes/arrow%20up.jpg" />
+                                    <Image url="@arrow%20up.jpg" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -82,7 +82,7 @@
                            <graphic>
                               <ImageView fitHeight="31.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../../../../../OneDrive/Desktop/MyTunes/arrow%20down.jpg" />
+                                    <Image url="@arrow%20down.jpg" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -112,7 +112,7 @@
                <graphic>
                   <ImageView fitHeight="31.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../../OneDrive/Desktop/MyTunes/arrow%20add.jpg" />
+                        <Image url="@arrow%20add.jpg" />
                      </image>
                   </ImageView>
                </graphic>
@@ -129,7 +129,7 @@
                   </TableView>
                   <HBox prefHeight="63.0" prefWidth="350.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#newSonglib" prefHeight="26.0" prefWidth="63.0" text="New...">
+                        <Button mnemonicParsing="false" onAction="#newSongLib" prefHeight="26.0" prefWidth="63.0" text="New...">
                            <HBox.margin>
                               <Insets top="10.0" />
                            </HBox.margin>
@@ -183,7 +183,7 @@
          </font>
       </Label>
       <Button layoutX="852.0" layoutY="57.0" mnemonicParsing="false" onAction="#search" text="search" />
-      <Slider fx:id="volumeConttol" layoutX="63.0" layoutY="75.0" />
+      <Slider fx:id="volumeControl" layoutX="63.0" layoutY="75.0" />
       <TextField fx:id="songIsPlaying" layoutX="339.0" layoutY="40.0" prefHeight="39.0" prefWidth="191.0" text="...(none)...  is playing">
          <font>
             <Font size="14.0" />
