--- a/src/main/resources/com/example/mytunesproject/Mytunes2.fxml
+++ b/src/main/resources/com/example/mytunesproject/Mytunes2.fxml
@@ -201,18 +201,36 @@
       </TextField>
       <Pane layoutX="5.0" layoutY="9.0" prefHeight="54.0" prefWidth="306.0">
          <children>
-            <Button layoutX="208.0" layoutY="19.0" mnemonicParsing="false" onAction="#forward" prefHeight="39.0" prefWidth="50.0" text="next">
+            <Button layoutX="169.0" layoutY="21.0" mnemonicParsing="false" onAction="#forward" prefHeight="0.0" prefWidth="26.0" text="next">
                <graphic>
-                  <ImageView fitHeight="31.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" />
-               </graphic></Button>
-            <Button layoutX="110.0" layoutY="20.0" mnemonicParsing="false" onAction="#play" prefHeight="33.0" prefWidth="70.0" text="play/pause">
+                  <ImageView fitHeight="31.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Next.jpg" />
+                     </image></ImageView>
+               </graphic>
+               <font>
+                  <Font size="6.0" />
+               </font></Button>
+            <Button layoutX="109.0" layoutY="20.0" mnemonicParsing="false" onAction="#play" prefHeight="33.0" prefWidth="34.0" text="play">
                <graphic>
-                  <ImageView fitHeight="28.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true" />
-               </graphic></Button>
-            <Button layoutX="31.0" layoutY="20.0" mnemonicParsing="false" onAction="#previous" prefHeight="33.0" prefWidth="50.0" text="prev">
+                  <ImageView fitHeight="28.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Play.jpg" />
+                     </image></ImageView>
+               </graphic>
+               <font>
+                  <Font size="7.0" />
+               </font></Button>
+            <Button layoutX="46.0" layoutY="20.0" mnemonicParsing="false" onAction="#previous" prefHeight="37.0" prefWidth="34.0" text="prev">
                <graphic>
-                  <ImageView fitHeight="29.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true" />
-               </graphic></Button>
+                  <ImageView fitHeight="29.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Previous.jpg" />
+                     </image></ImageView>
+               </graphic>
+               <font>
+                  <Font size="8.0" />
+               </font></Button>
          </children>
       </Pane>
    </children>
